Solve problems with eslint

--- a/package.json
+++ b/package.json
@@ -24,7 +24,17 @@
     "showdown": "^1.9.1"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
-    "eslint-plugin-react": "^7.29.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
